--- a/Customer/signup/csignup.html
+++ b/Customer/signup/csignup.html
@@ -28,8 +28,8 @@
             <input type="password" name="password" placeholder="Password" required>
             <button type="submit" name="submit" class="btn-signup" onclick="register(event)">Sign Up</button>
         </form>
-        <p>or</p>
-        <button id="googleLogin" class="google-login">Log in With Google</button>
+        <!-- <p>or</p>
+        <button id="googleLogin" class="google-login">Log in With Google</button>  -->
     </div>
     
     <script>
