--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
             <div class="signup-box">
                 <img src="images/customerlogo.png" alt="Customer Logo">
                 <h2>Looking for a Mess?</h2>
-                <button class="btn-option" onclick="location.href='Customer/signup/clogin.html'">Login IN</button>
+                <button class="btn-option" onclick="location.href='Customer/signup/clogin.html'">Log in</button>
             </div>
         </div>
        
