--- a/Customer/signup/clogin.html
+++ b/Customer/signup/clogin.html
@@ -25,8 +25,8 @@
             <input type="email" name="email" placeholder="Email Address" required>
             <input type="password" name="password" placeholder="Password" required>
             <button type="submit" name="submit" class="btn-signup" onclick="register()">Log IN</button>
-        <p>or</p>
-        <button id="googleLogin" class="google-login">Log in With Google</button>
+        <!-- <p>or</p>
+        <button id="googleLogin" class="google-login">Log in With Google</button> -->
     </div>
     
     <script>
