--- a/MealProvider/signup/mlogin.html
+++ b/MealProvider/signup/mlogin.html
@@ -25,8 +25,8 @@
             <input type="email"  name="email" placeholder="Email Address" required>
             <input type="password"  name="password" placeholder="Password" required>
             <button type="submit" name="submit" class="btn-signup">Log in</button>
-        <p>or</p>
-        <button id="googleLogin" class="google-login">Log in With Google</button>
+        <!-- <p>or</p>
+        <button id="googleLogin" class="google-login">Log in With Google</button> -->
     </div>
     
     <script>
