--- a/MealProvider/signup/msignup.html
+++ b/MealProvider/signup/msignup.html
@@ -23,15 +23,18 @@
     <div class="signup-box">
         <h2>Create Your Account as Mess Provider</h2>
         <form id="myForm" action="msignup.php" method="post">
-            <input type="text" name="fname" placeholder="First Name" required>
-            <input type="text" name="lname" placeholder="Last Name" required>
+            <input type="text" name="fname" placeholder="First Name" required pattern="^[A-Za-z ]+$" 
+            title="Only alphabets and spaces are allowed">
+            <input type="text" name="lname" placeholder="Last Name" required pattern="^[A-Za-z ]+$" 
+            title="Only alphabets and spaces are allowed">
             <input type="email" name="email" placeholder="Email Address" required>
-            <input type="password" name="password" placeholder="Password" required>
+            <input type="password" name="password" placeholder="Password" required pattern="^(?=.*[A-Z])(?=.*\d)[A-Za-z\d]{4,12}$" 
+            title="Password must be 4-8 characters long, contain at least one uppercase letter and one number.">
             <button type="submit" name="btn-signup" class="btn-signup" onclick="register(event)">Sign Up</button>
            
         </form>
-        <p>or</p>
-        <button id="googleLogin" class="google-login">Log in With Google</button>
+        <!-- <p>or</p>
+        <button id="googleLogin" class="google-login">Log in With Google</button> -->
     </div>
     
     <script>
